--- a/index_2_crafts.html
+++ b/index_2_crafts.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>hobbykarina - сайт</title>
+   <title>HOBBY Karina CRAFT - Легко та сучасно</title>
    <!--description-->
    <link rel="stylesheet" href="css/style.css">
    <link rel="stylesheet" href="css/style.header_footer.css">
@@ -20,15 +20,14 @@
             <div class="header_body">
 
                <a href="index.home.html" target="_blank" class="header_logo">
-                  <img src="img/header/logo-web.gif">
+                  <img src="../img/header/logo.png">
                </a>
                <div class="menu-btn">
                   <span></span>
                   <span></span>
                   <span></span>
+
                </div>
-
-
                <div class="menu">
                   <nav class="header_menu">
                      <ul class="header_list">
@@ -46,21 +45,6 @@
 
 
       <main class="page">
-
-         <div class="main_container">
-            <div class="main_decor">
-               <img src="img/header/Handmade  Header .jpg" alt="" style="width: 100%;">
-            </div>
-            <div class="content_input">
-               <div class="main_content">
-                  <h1> <span> B'яжемо гачком, плетемо бісером разом зі мною</span> </h1>
-               </div>
-               <div class="main_input">
-                  <input placeholder="Пошук" type="text" class="m_input" tabindex="1">
-                  <button class="search">Шукати</button>
-               </div>
-            </div>
-         </div>
 
 
       </main>
@@ -136,8 +120,7 @@
       </div>
    </section>
 
-   
-
+   </main>
    <div class="name_foot foot-name">
       <div class="foot-name_title">Ти можеш зробити своїми руками ВСЕ,<br> що забажаєш!</div>
 
@@ -145,6 +128,7 @@
 
       </div>
    </div>
+
 
    <footer class="footer">
       <div class="footer__container">
@@ -207,16 +191,11 @@
       </div>
    </footer>
 
+
    </div>
 
-   <script>
-      let menuBtn = document.querySelector('.menu-btn');
-      let menu = document.querySelector('.menu');
-      menuBtn.addEventListener('click', function () {
-         menuBtn.classList.toggle('active');
-         menu.classList.toggle('active');
-      })
-   </script>
+
+   <script src="js/script.js"></script>
 </body>
 
 </html>
