--- a/contacts.html
+++ b/contacts.html
@@ -35,11 +35,11 @@
                <div class="menu">
                   <nav class="header_menu">
                      <ul class="header_list">
-                        <li><a href="index.home.html" class="header_link">Головна</a></li>
+                        <li><a href="index.html" class="header_link">Головна</a></li>
                         <li><a href="#" class="menu_link">Рукоділля</a> </li>
-                        <li><a href="craft.idea.html" class="header_link">Ідеї</a></li>
-                        <li><a href="craft.gallery.html" target="blank" class="header_link">Галерея</a></li>
-                        <li><a href="craft.contacts.html" class="header_link">Контакти</a></li>
+                        <li><a href="idea.html" class="header_link">Ідеї</a></li>
+                        <li><a href="gallery.html" target="blank" class="header_link">Галерея</a></li>
+                        <li><a href="contacts.html" class="header_link">Контакти</a></li>
                      </ul>
                   </nav>
                </div>
@@ -51,7 +51,7 @@
 
          <div tabindex="0" class="wrapper1">
             <div>
-      
+      <h1>З нетерпфінням чекаю на ваші листи</h1>
                <h2>Щоб написати мені листа, будь ласка, введіть ваші дані:</h2>
                <form name="main" action="#" class="main-form">
                   <div class="main-column">
@@ -68,14 +68,14 @@
                      <div class="main_item">
                         <label for="input_1" class="main-form__label"> Ваші коментарі та побажання:</label>
                         <div class="textarea" row="25">
-                           <textarea tabindex="5" autocomplete="off" maxlength="30" name="form[]" class="textarea__item">Ваш коментар</textarea>
+                           <textarea tabindex="5" autocomplete="off" maxlength="30" name="textarea__item" class="textarea__item">Ваш коментар</textarea>
                            <div class="textarea__counter">Залишилося <span></span> символов</div>
                         </div>
                        <!---- <button class="button_area" onclick="writeCommentArea()">Відправити</button>
                      </div>
                   -->
                      <div class="form_button">
-                        <button tabindex="5" type="submit" class="button">Відправити</button>
+                        <button tabindex="6" type="submit" class="button" onclick="writeCommentArea"()>Відправити</button>
                      </div>
                   </div>
                </form>
