--- a/gallery.html
+++ b/gallery.html
@@ -38,11 +38,11 @@
                <div class="menu">
                   <nav class="header_menu">
                      <ul class="header_list">
-                        <li><a href="index.home.html" class="header_link">Головна</a></li>
+                        <li><a href="index.html" class="header_link">Головна</a></li>
                         <li><a href="#" class="menu_link">Рукоділля</a> </li>
-                        <li><a href="craft.idea.html" class="header_link">Ідеї</a></li>
-                        <li><a href="craft.gallery.html" target="blank" class="header_link">Галерея</a></li>
-                        <li><a href="craft.contacts.html" class="header_link">Контакти</a></li>
+                        <li><a href="idea.html" class="header_link">Ідеї</a></li>
+                        <li><a href="gallery.html" target="blank" class="header_link">Галерея</a></li>
+                        <li><a href="contacts.html" class="header_link">Контакти</a></li>
                      </ul>
                   </nav>
                </div>
@@ -77,39 +77,39 @@
 
             <figure class="photo">
                <a href="img/gallery/Origins/4_yellowdracelet.png" data-lightbox='roadtrip'
-                  data-title="Жовто-блакитний браслет"><img src="img/gallery/4_yellowdracelet.png"
+                  data-title="Жовто-блакитний браслет"><img src="img/gallery/image_gall4.png"
                      alt="Жовто-блакитний браслет" /></a>
                <figcaption>Жовто-блакитний браслет</figcaption>
             </figure>
 
             <figure class="photo">
-               <a href="img/" data-lightbox='roadtrip' data-title="Квіточки зв'язані крючком"><img src="img/"
+               <a href="img/gallery/Origins/5_easy-double.jpg" data-lightbox='roadtrip' data-title="Квіточки зв'язані крючком"><img src="img/gallery/image_gall5.jpg"
                      alt="Квіточки зв'язані крючком" /></a>
                <figcaption>Квіточки зв'язані крючком</figcaption>
             </figure>
 
             <figure class="photo">
-               <a href="img/" data-lightbox='roadtrip' data-title="Пов'язка крючком"><img
+               <a href="img/gallery/Origins/6_hat.png" data-lightbox='roadtrip' data-title="Пов'язка крючком"><img
                      src="img/gallery/image_gall6.jpg" alt="Пов'язка крючком" /></a>
                <figcaption>Пов'язка зв'язана крючком</figcaption>
             </figure>
 
             <figure class="photo">
-               <a href="img/Origins/rozovoe_ozero.jpeg" data-lightbox='roadtrip'
-                  data-title="Рожеве озеро на Арабатській стрілці"><img src="img/gallery/image_gall7.jpg"
+               <a href="img/" data-lightbox='roadtrip'
+                  data-title="Рожеве озеро на Арабатській стрілці"><img src="img/"
                      alt="Rose lake" /></a>
                <figcaption>Рожеве озеро на Арабатській стрілці</figcaption>
             </figure>
 
             <figure class="photo">
-               <a href="img/Origins/Skeli_Dovbusha.jpg" data-lightbox='roadtrip' data-title="Браслет з іменем Лена"><img
-                     src="img/gallery/image_gall8.jpg" alt="Браслет з іменем Лена" /></a>
+               <a href="img/gallery/Origins/8_bracLena.png" data-lightbox='roadtrip' data-title="Браслет з іменем Лена"><img
+                     src="img/gallery/image_gall8jpg.jpg" alt="Браслет з іменем Лена" /></a>
                <figcaption>Браслет з іменем Лена</figcaption>
             </figure>
 
             <figure class="photo">
-               <a href="img/п/Origins/tonel_kohania.jpg" data-lightbox='roadtrip' data-title="Гольниця - шляпка"><img
-                     src="img/gallery/image_gall9.jpg" alt="Гольниця - шляпка" /></a>
+               <a href="img/gallery/Origins/9_golnucia.png" data-lightbox='roadtrip' data-title="Гольниця - шляпка"><img
+                     src="img/gallery/image_gall9.png" alt="Гольниця - шляпка" /></a>
                <figcaption>Гольниця у вигляді шляпки</figcaption>
             </figure>
 
