--- a/idea.html
+++ b/idea.html
@@ -34,11 +34,11 @@
                <div class="menu">
                   <nav class="header_menu">
                      <ul class="header_list">
-                        <li><a href="index.home.html" class="header_link">Головна</a></li>
+                        <li><a href="index.html" class="header_link">Головна</a></li>
                         <li><a href="#" class="menu_link">Рукоділля</a> </li>
-                        <li><a href="craft.idea.html" class="header_link">Ідеї</a></li>
-                        <li><a href="craft.gallery.html" target="blank" class="header_link">Галерея</a></li>
-                        <li><a href="craft.contacts.html" class="header_link">Контакти</a></li>
+                        <li><a href="idea.html" class="header_link">Ідеї</a></li>
+                        <li><a href="gallery.html" target="blank" class="header_link">Галерея</a></li>
+                        <li><a href="contacts.html" class="header_link">Контакти</a></li>
                      </ul>
                   </nav>
                </div>
